traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:33: error: Missing closing brace `}' assumed here
} 
^